# parallel-assignment

./: .gitignore  README.md
BigGraph/: CMakeLists.txt  README.md  review.md
BigGraph/bfs/: CMakeLists.txt  Makefile  bfs.cpp  bfs.h  main.cpp
BigGraph/common/: contracts.h  graph.cpp  graph.h  graph_internal.h
BigGraph/pagerank/: CMakeLists.txt  Makefile  main.cpp  page_rank.cpp  page_rank.h
BigGraph/tools/: CMakeLists.txt  Makefile  graphTools.cpp
RealTimeSpecularHighlightRemoval/: CMakeLists.txt  CPURemoval.h  Clustering.cu  Clustering.h  ColorProcessing.cu  ColorProcessing.h  GPUCluster.cu  GPUCluster.h  GPURemoval.cu  GPURemoval.h  README.md  Removal.cu  Removal.h  SpecularHighlightRemoval.cu  SpecularHighlightRemoval.h  main.cu  note.md
